--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <span>OR</span>
                 <span><small>if you have not any account please register yourself</small></span>
             </p>
-            <form class="login form">
+            <div class="login form">
                 <div class="heading">
                     <button class="close-loginbtn">X</button>
                     <h2>Login Form</h2>
@@ -60,10 +60,10 @@
                 <div class="register-btn">
                     <span class="psw">Don't have account ?<a href="#"> Register</a></span>
                 </div>
-            </form>
+            </div>
         </div>
         <div class="register-container">
-            <form class="register form">
+            <div class="register form">
 
                 <div class="heading">
                     <button class="close-registerbtn">X</button>
@@ -90,10 +90,10 @@
                     <span class="psw">Already have an account ?<a href="#"> Login</a></span>
                 </div>
             
-            </form>
+            </div>
         </div>
         <div class="reset-container">
-            <form class="Reset-password form" >
+            <div class="Reset-password form" >
                 <div class="heading">
                     <button class="close-resetbtn">X</button>
                     <h2>Reset Password</h2>
@@ -120,7 +120,7 @@
                 <div class="gotologin-btn">
                     <span class="psw">Go to - <a href="#">Login</a></span>
                 </div>
-            </form>
+            </div>
         </div>
     </main>
     <script src="app.js">
